[package]
name = "aliyunsdk-rs"
version = "0.1.0"
edition = "2021"
authors = ["Peng <397192202@qq.com>"]
description = "Aliyun SDK for Rust."
repository = "https://github.com/peng0208/aliyunsdk-rs"
license = "MIT"
keywords = ["sdk", "aliyun"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version= "1.12.0" , features=["attributes"]}
base64 = "0.21.2"
chrono = "0.4.26"
http-types = "2.12.0"
rust-crypto = "0.2.36"
serde_json = "1.0.102"
surf = "2.3.2"
url = "2.4.0"

